--- a/css/dan.css
+++ b/css/dan.css
@@ -1,6 +1,20 @@
 body {
 	text-align: center;
 }
+.reveal a:not(.image) {
+	color: #bada55;
+	text-decoration: underline;
+	-webkit-transition: color .15s ease;
+	-moz-transition: color .15s ease;
+	-ms-transition: color .15s ease;
+	-o-transition: color .15s ease;
+	transition: color .15s ease;
+}
+.reveal a:not(.image):hover {
+	color: #ccc;
+	text-shadow: none;
+	border: none;
+}
 img {
 	position: relative;
 }
